hphp/test/zend/good/tests/classes/factory_and_singleton_004.php.expectf

Fatal error: Call to private test::__construct() from invalid context in %s/factory_and_singleton_004.php on line 8
